RNA introspection broken (hard crash) by rBaef08fda3ade #68831

Closed
opened 2019-08-19 16:53:18 +02:00 by Bastien Montagne · 4 comments

Run bpy.types.SplineIKConstraint.bl_rna.properties['joint_bindings'].default_array- [x] in py console...

See raised concern in aef08fda3a for details.

That kind of thing should never have been accepted, we should always have access to some default values without any actual data in the PointerRNA struct...

Run `bpy.types.SplineIKConstraint.bl_rna.properties['joint_bindings'].default_array- [x]` in py console... See raised concern in aef08fda3a for details. That kind of thing should never have been accepted, we should **always** have access to some default values without any actual data in the PointerRNA struct...
Alexander Gavrilov was assigned by Bastien Montagne 2019-08-19 16:53:18 +02:00
Author
Owner

Added subscribers: @mont29, @brecht, @ideasman42

Added subscribers: @mont29, @brecht, @ideasman42

Why the heck is it calling the get default array function using the pointer that points to the property metadata (FloatProperty) instead of the actual data the property wants? The new code should work perfectly fine with a NULL pointer, just not a wrong one.

Why the heck is it calling the get default array function using the pointer that points to the *property metadata* (FloatProperty) instead of the actual data the property wants? The new code should work perfectly fine with a NULL pointer, just not a *wrong* one.

This issue was referenced by e54cde403c

This issue was referenced by e54cde403c47ef2af1f5166f2e8895d051fe7e36

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68831
No description provided.