Fix T68831: use NULL instead of the wrong pointer to read default array.

The pointer argument is supposed to be the object the property belongs
to, not a pointer to the property metadata itself. This only worked
before because the argument was never used.